--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
 infoLabelText=HOW MUCH DO YOU SMOKE :
 quitButtonText=IM GONNA BE FREE
 smokeButtonText=IM GONNA SMOKE
-goodText=I WARN YOU
+warnText=I WARN YOU
 hopelessText=SAD TIMES HERE
