added public void writeCigaretteCounterToFile(int incrementedValue) which works correctly for now

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 infoLabelText=HOW MUCH DO YOU SMOKE :
 quitButtonText=IM GONNA BE FREE
-smokeButtonText=IM GONNA SMOKE
+smokeButtonTextUpd= Smoke
 warnText=I WARN YOU
 hopelessText=SAD TIMES HERE
+smokeButtonInitText=I will smoke
