--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,14 @@
 infoLabelText=HOW MUCH DO YOU SMOKE :
 quitButtonText=IM GONNA BE FREE
 smokeButtonTextUpd= Smoke
-warnText=I WARN YOU
-hopelessText=SAD TIMES HERE
+warnText=Whatever you say. I warned you.
+hopelessText=It's too sad it's going that way.
 smokeButtonInitText=I will smoke
+hopeText=Someday you definitely will.
+firstCigarette=Yeah, I know the first one's the best.
+secondCigarette=Also good.
+half_of_all=You've smoked half a pack already!
+are_you_sure?=Are you sure?
+yes=Yes.
+done_for_today=Okay, that's it for today. Hopefully tomorrow it'll be 0.
+remaining_half=But there's still the remaining half...
